create separate script file for testing checkers game

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>games with friends</title>
 </head>
 <body>
-  <script src="script.js"></script>
+  <h1>games with friends</h1>
+  <!-- <script src="script.js"></script> -->
+  <script src="checkers.js"></script>
 </body>
 </html>
